# sovereign-memory

./: .env.example  .gitattributes  .gitignore  DESIGN.md  LICENSE  README.md  SECURITY_PLAN.md  pyproject.toml
.agents/plugins/: marketplace.json
.kilo/: agent-manager.json
codex-vault/schema/: AGENTS.md
docs/: CANONICAL-PATHS.md  TROUBLESHOOTING.md  runtime-integration.md
docs/contracts/: AGENT.md  CAPABILITIES.md  PAGE_TYPES.md  POLICY.md  THREAT_MODEL.md  VAULT.md  WORKFLOWS.md
docs/decisions/: SOVEREIGN-OPENCLAW-OPTION2-DECISIONS.md
docs/plans/: SOVEREIGN-MEMORY-CORE-UPGRADES-SCALE-AGNOSTIC.md  SOVEREIGN-OPENCLAW-OPTION2-PLAN.md  hermes-phase3-prompts.md.md  sovereign-openclaw-option1-plan.md
engine/: afm_scheduler.py  afm_writer.py  agent_api.py  chunker.py  config.py  db.py  decay.py  episodic.py  faiss_index.py  faiss_persist.py  graph_export.py  hyde.py  hygiene.py  index_all.py  indexer.py  migrate_v3_to_v3_1.py  migrations.py  models.py  openclaw-tool.sh  query_expand.py  rationale.py  requirements.txt  rerank_cache.py  retrieval.py  safety.py  scoring.py  seed_identity.py  sovereign_memory.py  sovrd.py  sovrd_client.py  test_audit_escape.py  test_pr10_handoff.py  test_pr11_observability.py  test_pr12_afm_loop.py  test_pr13_synthesis_procedures.py  test_pr14_reorg_pruning.py  test_pr15_quant_semantic.py  test_pr1_foundation.py  test_pr1b_contracts.py  test_pr2_envelope.py  (+14 more)
engine/backends/: lance.py  (+5 more)
eval/: queries.jsonl
openclaw-extension/: README.md  migrate_phase2.py  openclaw.plugin.json  package-lock.json  package.json  sovrd.py
tests/: test_extraction.py  test_integration.py  test_package.py
(+212 files in other folders)
